# R_D_Software_Inclita_25_26

./: Cargo.toml  DEBUG.md  INSTALL.md  Modelfile  README.md  TESTING.md
.cargo/: config.toml
.github/workflows/: rust.yml
src/: bno055.rs  configs.rs  hardware_cfg.rs  main.rs  mock_data.rs  ms6507.rs  sd_card.rs  telemetry.rs
src/sensors/: bno055.rs  gps.rs  iis2mdc.rs  mock.rs  mod.rs  ms5611.rs
src/storage/: mod.rs  sd_card.rs  sd_card_utils.rs
src/telemetry/: data.rs  lora.rs  mod.rs
