[package]
name = "r_d_inclita_sofware"
version = "0.1.0"
edition = "2024"

[dependencies]


embassy-stm32 = { version = "0.5.0", features = [
  "defmt",
  "stm32f446rc",
  "unstable-pac",
  "memory-x",
  "time-driver-tim4",
  "exti",
  "chrono",
] }

embassy-sync = { version = "0.7.2", features = ["defmt"] }

embassy-executor = { version = "0.9.0", features = [
  "arch-cortex-m",
  "executor-thread",
  "executor-interrupt",
  "defmt",
] }


embassy-time = { version = "0.5.0", features = [
  "defmt",
  "defmt-timestamp-uptime",
  "tick-hz-32_768",
] }


embassy-usb = { version = "0.5.1", features = ["defmt"] }

embassy-futures = "0.1.2"


defmt = "1.0.1"
defmt-rtt = "1.1.0"
#cortex-m stuff and hal stuff
cortex-m = { version = "0.7.6", features = [
  "inline-asm",
  "critical-section-single-core",
] }

cortex-m-rt = "0.7.5"
embedded-hal = "1.0.0"
embedded-hal-bus = { version = "0.3.0", features = ["async"] }
embedded-io = "0.7.1"
embedded-io-async = "0.7.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
critical-section = "1.2.0"
panic-halt = "1.0.0"

embedded-sdmmc = "0.9.0"
embedded-hal-async = "1.0.0"


serde = { version = "1.0", default-features = false, features = ["derive"] }
postcard = { version = "1.0", default-features = false }
heapless = { version = "0.8", features = ["defmt-03", "serde"] }
bno055 = "0.4.0"
ms5611-rs = "0.1.1"
sx127x_lora ={ version = "0.3.1", default-features = false}
[profile.dev]
# Optimize for size even in debug builds
opt-level = "s"

[profile.dev.package."*"]
# Aggressively optimize all of your dependencies (like Embassy and standard library)
opt-level = "z"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true
debug = 2 # Keep debug symbols so defmt still works in release mode!

[features]
default = []
mock-sensors = [] # Builds the mock version were we send the mock data

[package.metadata.embassy]
build = [{ target = "thumbv7em-none-eabihf" }]

[[bin]]
name = "r_d_inclita_sofware"
path = "src/main.rs"
test = false
doctest = false
